Course validation: add start/end date validation and remove unnecessary subject and description validation