@@ -2,37 +2,24 @@ package com.example.courses.utils;
 
 import com.example.courses.persistence.entity.Course;
 
+import java.time.LocalDateTime;
+
 public class CourseValidation {
-    static final int MAX_TITLE_LENGTH = 100;
-    static final int MAX_SUBJECT_LENGTH = 100;
-    static final int MAX_DESCRIPTION_LENGTH = 512;
+    private CourseValidation() {
+    }
 
-    private CourseValidation(){}
-
-    public static boolean isCourseValid(Course course){
+    public static boolean isCourseValid(Course course) {
         return course != null
                 && isTitleValid(course.getTitle())
-                && isDescriptionValid(course.getDescription());
+                && isStartAndEndDateValid(course.getStartDate(), course.getEndDate());
     }
 
     public static boolean isTitleValid(String title) {
-        return title != null
-                && !title.trim().isEmpty()
-                && title.length() <= MAX_TITLE_LENGTH;
+        return title != null && !title.isBlank();
     }
 
-    public static boolean isSubjectValid(String subject) {
-        return subject != null
-                && !subject.trim().isEmpty()
-                && subject.length() <= MAX_SUBJECT_LENGTH;
-    }
-
-    public static boolean isDescriptionValid(String description) {
-        if(description != null){
-            return description.length() < MAX_DESCRIPTION_LENGTH;
-        }
-
-        return true;
+    public static boolean isStartAndEndDateValid(LocalDateTime startDate, LocalDateTime endDate) {
+        return startDate != null && endDate != null && startDate.isBefore(endDate) && startDate.isAfter(LocalDateTime.now());
     }
 
 }
